prevent overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,8 @@ img {
 body {
     background: #ccf2fc;
     font-size: 16px;
+    width: 100%;
+    overflow-x: hidden;
     font-family: 'Amatic SC';
 }
 .wensen {
